--- a/src/Shared/PortalEscolar.Exceptions/ResourceMensagensDeErro.resx
+++ b/src/Shared/PortalEscolar.Exceptions/ResourceMensagensDeErro.resx
@@ -150,6 +150,9 @@
   <data name="NOMECOMPLETO_VAZIO" xml:space="preserve">
     <value>O campo nome completo deve ser informado.</value>
   </data>
+  <data name="REGISTRAR_PROFESSORA_SUCESSO" xml:space="preserve">
+    <value>Professora registrado com sucesso !</value>
+  </data>
   <data name="SENHA_MINIMO_SEIS_CARACTERES" xml:space="preserve">
     <value>A senha deve conter no minimo 6 caracteres.</value>
   </data>
