--- a/src/backend/PortalEscolar.Application/Responses/ResourceRespostasUseCases.resx
+++ b/src/backend/PortalEscolar.Application/Responses/ResourceRespostasUseCases.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ENVIAR_EXERCICIO_ENVIADO_COM_SUCESSO" xml:space="preserve">
+    <value>O exercicio foi enviado com sucesso !!</value>
+  </data>
   <data name="MATRICULA_REALIZADA_COM_SUCESSO" xml:space="preserve">
     <value>Aluno matriculado com sucesso !!</value>
   </data>
