--- a/src/Shared/PortalEscolar.Exceptions/ResourceMensagensDeErro.resx
+++ b/src/Shared/PortalEscolar.Exceptions/ResourceMensagensDeErro.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ALUNO_INEXISTENTE" xml:space="preserve">
+    <value>Essse aluno não existe em nossa base de dados.</value>
+  </data>
   <data name="DATANASCIMENTO_INVALIDO" xml:space="preserve">
     <value>O campo data nascimento está inválido. o formato deve ser DD/MM/AAAA</value>
   </data>
