--- a/src/Shared/PortalEscolar.Exceptions/ResourceMensagensDeErro.resx
+++ b/src/Shared/PortalEscolar.Exceptions/ResourceMensagensDeErro.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ALUNO_ENVIAR_EXERCICIORESOLVIDO_EXERCICIOID_INVALIDO" xml:space="preserve">
+    <value>O campo ExercicioParaResolverId deve conter 24 caracteres.</value>
+  </data>
+  <data name="ALUNO_ENVIAR_EXERCICIORESOLVIDO_EXERCICIOJAFOIRESOLVIDO" xml:space="preserve">
+    <value>O aluno já resolveu este exercicio.</value>
+  </data>
+  <data name="ALUNO_ENVIAR_EXERCICIORESOLVIDO_PRAZOEXPIRADO" xml:space="preserve">
+    <value>O exercicio enviado está fora do prazo.</value>
+  </data>
   <data name="ALUNO_INEXISTENTE" xml:space="preserve">
     <value>Essse aluno não existe em nossa base de dados.</value>
   </data>
